--- a/app.json
+++ b/app.json
@@ -31,6 +31,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "b322d209-cf3d-47b6-b7f0-a8607d14318b"
+      }
+    },
+    "owner": "i_am_mern"
   }
 }
